// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders empty closed 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Select renders empty opened 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
  border-top: none !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c5 {
  color: #ccc;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  text-align: center;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        No items
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders empty with custom placeholders 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
  border-top: none !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c5 {
  color: #ccc;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  text-align: center;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Custom placeholder
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        Custom empty placeholder
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders selected items count in select box 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
    display="selected-count"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Select renders selected items in select box 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
    display="selected-items"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Select renders with fixed height 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  line-height: 1.2em;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: 400px;
  max-height: 400px;
  margin: 0;
  padding: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
  border-top: none !important;
  overflow: hidden;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with fixed width 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  line-height: 1.2em;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 400px;
  min-width: 100%;
  max-width: 400px;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
  border-top: none !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 400px;
  max-width: 400px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with no items selected 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  line-height: 1.2em;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
  border-top: none !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with responsive spacing 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: xs;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  line-height: 1.2em;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: xs;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c7 {
  line-height: 1.2em;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: xs;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
}

.c7:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
  border-top: none !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: xs;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c1 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c1 {
    padding: md;
  }
}

@media only screen and (min-width:75rem) {
  .c1 {
    padding: lg;
  }
}

@media only screen and (min-width:48rem) {
  .c5 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c5 {
    padding: md;
  }
}

@media only screen and (min-width:75rem) {
  .c5 {
    padding: lg;
  }
}

@media only screen and (min-width:48rem) {
  .c7 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c7 {
    padding: md;
  }
}

@media only screen and (min-width:75rem) {
  .c7 {
    padding: lg;
  }
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: lg;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c7"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with some items selected 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  line-height: 1.2em;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c7 {
  line-height: 1.2em;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
}

.c7:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
  border-top: none !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c7"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with spacing 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  border-top-left-radius: 0.4018775720164609rem;
  border-top-right-radius: 0.4018775720164609rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  line-height: 1.2em;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: md;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c7 {
  line-height: 1.2em;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: md;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
}

.c7:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.4018775720164609rem;
  border-bottom-right-radius: 0.4018775720164609rem;
  border-top: none !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: xl;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c7"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;
